TM-3 Generate db models  - updated model for generating correct property names